--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
 
             <ul class="section-items list">
               <li class="benefits-item">
+                <div class="icon-container">
+                  <svg class="icon-bgr" width="64" height="64">
+                    <use href="./images/icons.svg#icon-antenna1"></use>
+                  </svg>
+                </div>
                 <h3 class="section-subtitle">Strategy</h3>
                 <p class="section-text">
                   Our goal is to identify the Business problem to walk away with
@@ -85,6 +90,11 @@
               </li>
 
               <li class="benefits-item">
+                <div class="icon-container">
+                  <svg class="icon-bgr" width="64" height="64">
+                    <use href="./images/icons.svg#icon-clock2"></use>
+                  </svg>
+                </div>
                 <h3 class="section-subtitle">Punctuality</h3>
                 <p class="section-text">
                   Bring the key message to the brand's audience for the best
@@ -93,6 +103,11 @@
               </li>
 
               <li class="benefits-item">
+                <div class="icon-container">
+                  <svg class="icon-bgr" width="64" height="64">
+                    <use href="./images/icons.svg#icon-diagram3"></use>
+                  </svg>
+                </div>
                 <h3 class="section-subtitle">Diligence</h3>
                 <p class="section-text">
                   Research and confirm brands that present the strongest digital
@@ -101,6 +116,11 @@
               </li>
 
               <li class="benefits-item">
+                <div class="icon-container">
+                  <svg class="icon-bgr" width="64" height="64">
+                    <use href="./images/icons.svg#icon-astronaut4"></use>
+                  </svg>
+                </div>
                 <h3 class="section-subtitle">Technologies</h3>
                 <p class="section-text">
                   Design practice focused on digital experiences. We bring forth
@@ -144,6 +164,37 @@
               <div class="team-card">
                 <h3 class="section-subtitle">Mark Guerrero</h3>
                 <p class="section-text">Product Designer</p>
+
+                <ul class="socials-list list">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -152,6 +203,36 @@
               <div class="team-card">
                 <h3 class="section-subtitle">Tom Ford</h3>
                 <p class="section-text">Frontend Developer</p>
+                <ul class="socials-list list">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -160,6 +241,36 @@
               <div class="team-card">
                 <h3 class="section-subtitle">Camila Garcia</h3>
                 <p class="section-text">Marketing</p>
+                <ul class="socials-list list">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -168,6 +279,36 @@
               <div class="team-card">
                 <h3 class="section-subtitle">Daniel Wilson</h3>
                 <p class="section-text">UI Designer</p>
+                <ul class="socials-list list">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg class="icon-social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -175,17 +316,106 @@
       </section>
     </main>
 
-    <!--footer-->
-    <footer class="footer color">
+    <section class="section">
       <div class="container">
-        <a href="./index.html" class="logo">
-          <span class="logo-color">Web</span
-          ><span class="footer-logo-color">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <h2 class="section-title">Customers</h2>
+
+        <ul class="section-items list">
+          <li class="company">
+            <a href="" class="company-link">
+              <svg class="company-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-logo1"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="company">
+            <a href="" class="company-link">
+              <svg class="company-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-logo2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="company">
+            <a href="" class="company-link">
+              <svg class="company-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-logo3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="company">
+            <a href="" class="company-link">
+              <svg class="company-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-logo4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="company">
+            <a href="" class="company-link">
+              <svg class="company-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-logo5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="company">
+            <a href="" class="company-link">
+              <svg class="company-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-logo6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!--footer-->
+    <footer class="footer-page">
+      <div class="container footer">
+        <div class="footer-box">
+          <a href="./index.html" class="logo">
+            <span class="logo-color">Web</span
+            ><span class="footer-logo-color">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="icon-box">
+          <h3 class="subtitle-footer">Social media</h3>
+
+          <ul class="socials-footer list">
+            <li class="social-item-footer">
+              <a href="" class="social-link-footer">
+                <svg class="icon-social-footer" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item-footer">
+              <a href="" class="social-link-footer">
+                <svg class="icon-social-footer" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item-footer">
+              <a href="" class="social-link-footer">
+                <svg class="icon-social-footer" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item-footer">
+              <a href="" class="social-link-footer">
+                <svg class="icon-social-footer" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
