--- a/portfolio.html
+++ b/portfolio.html
@@ -77,104 +77,128 @@
 
           <ul class="portfolio-items list">
             <li class="portfolio-panel">
-              <img
-                src="./images/img08.jpg"
-                alt="portfolio picture"
-                width="360"
-              />
-              <div class="portfolio-card">
-                <h2 class="section-subtitle">Banking App Interface Concept</h2>
-                <p class="section-text">App</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img08.jpg"
+                  alt="portfolio picture"
+                  width="360"
+                />
+                <div class="portfolio-card">
+                  <h2 class="section-subtitle portfolio">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="section-text">App</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-panel">
-              <img
-                src="./images/img07.jpg"
-                alt="portfolio picture"
-                width="360"
-              />
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img07.jpg"
+                  alt="portfolio picture"
+                  width="360"
+                />
 
-              <div class="portfolio-card">
-                <h2 class="section-subtitle">Cashless Payment</h2>
-                <p class="section-text">Marketing</p>
-              </div>
+                <div class="portfolio-card">
+                  <h2 class="section-subtitle portfolio">Cashless Payment</h2>
+                  <p class="section-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-panel">
-              <img
-                src="./images/img06.jpg"
-                alt="portfolio picture"
-                width="360"
-              />
-              <div class="portfolio-card">
-                <h2 class="section-subtitle">Meditaion App</h2>
-                <p class="section-text">App</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img06.jpg"
+                  alt="portfolio picture"
+                  width="360"
+                />
+                <div class="portfolio-card">
+                  <h2 class="section-subtitle portfolio">Meditaion App</h2>
+                  <p class="section-text">App</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-panel">
-              <img
-                src="./images/img05.jpg"
-                alt="portfolio picture"
-                width="360"
-              />
-              <div class="portfolio-card">
-                <h2 class="section-subtitle">Taxi Service</h2>
-                <p class="section-text">Marketing</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img05.jpg"
+                  alt="portfolio picture"
+                  width="360"
+                />
+                <div class="portfolio-card">
+                  <h2 class="section-subtitle portfolio">Taxi Service</h2>
+                  <p class="section-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-panel">
-              <img
-                src="./images/img04.jpg"
-                alt="portfolio picture"
-                width="360"
-              />
-              <div class="portfolio-card">
-                <h2 class="section-subtitle">Screen Illustrations</h2>
-                <p class="section-text">Design</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img04.jpg"
+                  alt="portfolio picture"
+                  width="360"
+                />
+                <div class="portfolio-card">
+                  <h2 class="section-subtitle portfolio">
+                    Screen Illustrations
+                  </h2>
+                  <p class="section-text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-panel">
-              <img
-                src="./images/img03.jpg"
-                alt="portfolio picture"
-                width="360"
-              />
-              <div class="portfolio-card">
-                <h2 class="section-subtitle">Online Courses</h2>
-                <p class="section-text">Marketing</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img03.jpg"
+                  alt="portfolio picture"
+                  width="360"
+                />
+                <div class="portfolio-card">
+                  <h2 class="section-subtitle portfolio">Online Courses</h2>
+                  <p class="section-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-panel">
-              <img
-                src="./images/img02.jpg"
-                alt="portfolio picture"
-                width="360"
-              />
-              <div class="portfolio-card">
-                <h2 class="section-subtitle">Instagram Stories Concept</h2>
-                <p class="section-text">Design</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img02.jpg"
+                  alt="portfolio picture"
+                  width="360"
+                />
+                <div class="portfolio-card">
+                  <h2 class="section-subtitle portfolio">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="section-text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-panel">
-              <img
-                src="./images/img01.jpg"
-                alt="portfolio picture"
-                width="360"
-              />
-              <div class="portfolio-card">
-                <h2 class="section-subtitle">Organic Food</h2>
-                <p class="section-text">Web Site</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img01.jpg"
+                  alt="portfolio picture"
+                  width="360"
+                />
+                <div class="portfolio-card">
+                  <h2 class="section-subtitle portfolio">Organic Food</h2>
+                  <p class="section-text">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-panel">
-              <img
-                src="./images/img00.jpg"
-                alt="Пortfolio picture"
-                width="360"
-              />
-              <div class="portfolio-card">
-                <h2 class="section-subtitle">Fresh Coffee</h2>
-                <p class="section-text">Web Site</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img00.jpg"
+                  alt="portfolio picture"
+                  width="360"
+                />
+                <div class="portfolio-card">
+                  <h2 class="section-subtitle portfolio">Fresh Coffee</h2>
+                  <p class="section-text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -182,16 +206,53 @@
     </main>
 
     <!--footer-->
-    <footer class="footer color">
-      <div class="container">
-        <a href="./index.html" class="logo">
-          <span class="logo-color">Web</span
-          ><span class="footer-logo-color">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+    <footer class="footer-page">
+      <div class="container footer">
+        <div class="footer-box">
+          <a href="./index.html" class="logo">
+            <span class="logo-color">Web</span
+            ><span class="footer-logo-color">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="icon-box">
+          <h3 class="subtitle-footer">Social media</h3>
+
+          <ul class="socials-footer list">
+            <li class="social-item-footer">
+              <a href="" class="social-link-footer">
+                <svg class="icon-social-footer" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item-footer">
+              <a href="" class="social-link-footer">
+                <svg class="icon-social-footer" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item-footer">
+              <a href="" class="social-link-footer">
+                <svg class="icon-social-footer" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item-footer">
+              <a href="" class="social-link-footer">
+                <svg class="icon-social-footer" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
