--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
               <span class="logo-color">Web</span>Studio
             </a>
             <ul class="nav-menu list">
-              <li><a href="" class="nav-link">Studio</a></li>
+              <li>
+                <a href="./index.html" class="nav-link current">Studio</a>
+              </li>
               <li>
                 <a href="./portfolio.html" class="nav-link">Portfolio</a>
               </li>
