--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
               <span class="logo-color">Web</span>Studio
             </a>
             <ul class="nav-menu list">
-              <li><a href="" class="nav-link">Studio</a></li>
+              <li><a href="./index.html" class="nav-link">Studio</a></li>
               <li>
                 <a href="./portfolio.html" class="nav-link current"
                   >Portfolio</a
